Add Book Category added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
-        <activity android:name=".DashboardAdminActivity"></activity>
+        <activity android:name=".CategoryAddActivity"></activity>
+        <activity android:name=".DashboardAdminActivity" />
         <activity android:name=".DashboardUserActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
