--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,17 +3,17 @@
     package="com.example.getyourbook">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".MyApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
-        <activity android:name=".PdfAddActivity"></activity>
+        <activity android:name=".PdfListAdminActivity"></activity>
+        <activity android:name=".PdfAddActivity" />
         <activity android:name=".CategoryAddActivity" />
         <activity android:name=".DashboardAdminActivity" />
         <activity android:name=".DashboardUserActivity" />
